--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>You shouldn't have done that</title>
+  <title>You should have paid.</title>
   <style>
     html, body {
       height: 100%;
